<resources>
    <string name="app_name">EasyFoodApp</string>
    <string name="enter_your_email">Enter Your Email</string>
    <string name="do_not_have_an_account">Do not have an account?</string>
    <string name="todo">TODO</string>
    <string name="register_here">REGISTER HERE</string>
    <string name="login">LOGIN</string>
    <string name="enter_your_password">Enter Your Password</string>
    <string name="the_easy_food">THE EASY FOOD</string>
    <string name="textview">TextView</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email</string>
    <string name="mobile_no">Mobile No:</string>
    <string name="alternative_mobile_no">Alternative Mobile No:</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="upload">Upload</string>
    <string name="item">Item:</string>
    <string name="quantity">Quantity:</string>
</resources>